# k8s-final-cource

./: 404.html  CNAME  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: loadgenerator-cicd.yml  mkdocs-cd.yml
cicd/: index.html
docs/: cicd.md  index.md  metrics.md
docs/monitoring/: grafana.md  logs.md
docs/tasks/: autoscaling.md  cluster_deployment.md  future.md  logs_configuration.md  monitoring_configuration.md  services_deployment.md
monitoring/grafana/: index.html
monitoring/logs/: index.html
monitoring/metrics/: index.html
src/base_services/: manifests.yaml
src/hpa/: frontend-hpa.yaml
src/ingress/: base.yaml  ingress.yaml
src/ingress/helm/: values.yaml
src/ingress/helm/templates/: controller-configmap.yaml
src/load_testing/: profile.yaml
src/loadgenerator/: Dockerfile  locustfile.py  requirements.in  requirements.txt
src/loadgenerator/helm/: values.yaml
src/loadgenerator/helm/templates/: NOTES.txt  configmap.yaml  deployment.yaml  hpa.yaml
src/loadgenerator/helm/templates/tests/: test-connection.yaml
src/monitoring/: grafana.yaml  trickster.yaml
src/monitoring/prometheus/: Chart.yaml
src/ssl/: acme-issuer.yaml
tasks/autoscaling/: index.html
tasks/cluster_deployment/: index.html
tasks/future/: index.html
tasks/logs_configuration/: index.html
tasks/monitoring_configuration/: index.html
tasks/services_deployment/: index.html
