[tool.poetry]
name = "k8s-final-cource"
version = "0.1.0"
description = ""
authors = ["northpowered <o.romanov@forvard.me>"]
readme = "README.md"
packages = [{include = "k8s_final_cource"}]

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "^1.4.2"
mkdocs-material = "^9.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
